frontend/test/should_pass/enum_model_100.gm
node class a {
	id: e;
}
enum e { eItem }

