frontend/test/should_fail/enum_model_002.gm
// empty enum declarations are not allowed

enum te { }

node class A {
	a : int;
}

